<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    android:id="@+id/menu">
    <item android:id="@+id/action_ordering" android:title="@string/action_ordering"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_categories" android:title="@string/action_categories"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_order_by_code" android:title="@string/action_order_by_code"
        android:orderInCategory="101" android:showAsAction="never" />
    <item android:id="@+id/action_order_by_name" android:title="@string/action_order_by_name"
        android:orderInCategory="102" android:showAsAction="never" />
</menu>