<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="50dp" android:id="@+id/fragment_header">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout_header"
        android:showDividers="end">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_text_name"
            android:id="@+id/textView_FoodName"
            android:layout_gravity="left|center_vertical"
            android:paddingLeft="53dp"
            android:textSize="20sp"
            android:paddingRight="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_text_ch"
            android:id="@+id/textView_CH"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical|right"
            android:textSize="20sp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/header_text_gi"
            android:id="@+id/textView_GI"
            android:paddingLeft="12dp"
            android:layout_gravity="center_vertical|right"
            android:textSize="20sp"
            android:paddingRight="10dp" />
    </LinearLayout>

</FrameLayout>
